Delete raster traces

--- a/maplibre/raster-tiles/raster-only.html
+++ b/maplibre/raster-tiles/raster-only.html
@@ -28,7 +28,7 @@
 
       const map = new maplibregl.Map({
         container: "map", // the id of the div element,
-        zoom: zoom, // starting zoom
+        zoom: 12, // starting zoom
         center: [lng,lat] // starting location [longitude, latitude]
       });
 
