--- a/leaflet/raster-map.html
+++ b/leaflet/raster-map.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Display a tile layer</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
@@ -24,9 +23,10 @@
   <body>
     <div id="map"></div>
     <script type="module">
-      import {apiKey} from "../../auth.js";
+      import {basemap as location} from "../locations.js";
+      import {apiKey} from "../auth.js";
 
-      const map = L.map("map").setView([25,-25],3);
+      const map = L.map("map").setView([location.lat,location.lng],location.zoom);
 
       const tileLayer =  L.esri
         .tiledMapLayer({
