--- a/leaflet/vector-only.html
+++ b/leaflet/vector-only.html
@@ -1,14 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Display a tile layer</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
     <!-- Load Esri Leaflet from CDN -->
     <script src="https://unpkg.com/esri-leaflet@3.0.10/dist/esri-leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet-vector@4.0.2/dist/esri-leaflet-vector.js"></script>
-    <script src="./pan-locations.js"></script>
     <style>
       html,
       body,
@@ -26,8 +24,9 @@
   <body>
     <div id="map"></div>
     <script type="module">
+      import {vectorOnly as location} from '../locations.js';
 
-      const map = L.map("map").setView([lat,lng],zoom);
+      const map = L.map("map").setView([location.lat,location.lng],location.zoom);
 
       const vectorTileLayer = L.esri.Vector.vectorTileLayer("https://vectortileservices3.arcgis.com/GVgbJbqm8hXASVYi/arcgis/rest/services/Santa_Monica_Mountains_Parcels_VTL/VectorTileServer", {
     });
