--- a/maplibre/raster-map.html
+++ b/maplibre/raster-map.html
@@ -22,8 +22,8 @@
   <body>
     <div id="map"></div>
     <script type="module">
-      
       import {apiKey} from "../../auth.js";
+      import {basemap as location} from "../locations.js";
 
       const map = new maplibregl.Map({
         container: "map", // the id of the div element,
@@ -45,8 +45,8 @@
             }
           ]
         },
-        zoom: 2, // starting zoom
-        center: [-25,25] // starting location [longitude, latitude]
+        zoom: location.zoom-1, // starting zoom
+        center: [location.lng,location.lat] // starting location [longitude, latitude]
       });
     </script>
   </body>
