--- a/maplibre/vector-map.html
+++ b/maplibre/vector-map.html
@@ -23,15 +23,16 @@
     <div id="map"></div>
     <script type="module">
       
-      import {apiKey} from "../../auth.js";
+      import {apiKey} from "../auth.js";
+      import {basemap as location} from "../locations.js";
 
       const basemapEnum = "ArcGIS:LightGray";
 
       const map = new maplibregl.Map({
         container: "map", // the id of the div element,
         style: `https://basemaps-api.arcgis.com/arcgis/rest/services/styles/${basemapEnum}?type=style&token=${apiKey}`,
-        zoom: 2, // starting zoom
-        center: [-25,25] // starting location [longitude, latitude]
+        zoom: location.zoom-1, // starting zoom
+        center: [location.lng,location.lat] // starting location [longitude, latitude]
       });
     </script>
   </body>
