--- a/maplibre/vector-only.html
+++ b/maplibre/vector-only.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <script src="https://unpkg.com/maplibre-gl@3.0.1/dist/maplibre-gl.js"></script>
     <link href="https://unpkg.com/maplibre-gl@3.0.1/dist/maplibre-gl.css" rel="stylesheet" />
-    <script src="./pan-locations.js"></script>
     <style>
       html,
       body,
@@ -23,15 +22,14 @@
   <body>
     <div id="map"></div>
     <script type="module">
-      
-      import {apiKey} from "../../auth.js";
+      import {vectorOnly as location} from '../locations.js';
 
       const basemapEnum = "ArcGIS:LightGray";
 
       const map = new maplibregl.Map({
         container: "map", // the id of the div element,
-        zoom: zoom, // starting zoom
-        center: [lng,lat] // starting location [longitude, latitude]
+        zoom: location.zoom-1, // starting zoom
+        center: [location.lng,location.lat] // starting location [longitude, latitude]
       });
 
       map.addSource("parcels", {
