--- a/openlayers/raster-map.html
+++ b/openlayers/raster-map.html
@@ -21,8 +21,8 @@
   <body>
     <div id="map"></div>
     <script type="module">
-      
-      import {apiKey} from "../../auth.js"; 
+      import {basemap as location} from "../locations.js"
+      import {apiKey} from "../auth.js"; 
 
       const map = new ol.Map({ 
         target: "map", 
@@ -37,8 +37,8 @@
 
       map.setView(
         new ol.View({
-          center: ol.proj.fromLonLat([-25,25]), // Starting location [longitude, latitude]
-          zoom: 3
+          center: ol.proj.fromLonLat([location.lng,location.lat]), // Starting location [longitude, latitude]
+          zoom: location.zoom
         })
       );
     </script>
