--- a/openlayers/vector-map.html
+++ b/openlayers/vector-map.html
@@ -22,8 +22,8 @@
   <body>
     <div id="map"></div>
     <script type="module">
-      
-      import {apiKey} from "../../auth.js"; 
+      import {basemap as location} from '../locations.js';
+      import {apiKey} from "../auth.js"; 
 
       const basemapId = "ArcGIS:LightGray";
       const basemapURL = "https://basemaps-api.arcgis.com/arcgis/rest/services/styles/" + basemapId + "?type=style&token=" + apiKey;
@@ -34,8 +34,8 @@
 
       map.setView(
         new ol.View({
-          center: ol.proj.fromLonLat([-25,25]), // Starting location [longitude, latitude]
-          zoom: 3
+          center: ol.proj.fromLonLat([location.lng,location.lat]), // Starting location [longitude, latitude]
+          zoom: location.zoom
         })
       );
 
