--- a/openlayers/vector-only.html
+++ b/openlayers/vector-only.html
@@ -22,6 +22,7 @@
   <body>
     <div id="map"></div>
     <script type="module">
+      import {vectorOnly as location} from '../locations.js';
 
       const map = new ol.Map({ 
         target: "map", 
@@ -29,8 +30,8 @@
 
       map.setView(
         new ol.View({
-          center: ol.proj.fromLonLat([lng,lat]), // Starting location [longitude, latitude]
-          zoom: zoom
+          center: ol.proj.fromLonLat([location.lng,location.lat]), // Starting location [longitude, latitude]
+          zoom: location.zoom
         })
       );
 
