add await promise to try and fix lighthouse tbt

--- a/tests/leaflet/raster-map.html
+++ b/tests/leaflet/raster-map.html
@@ -33,6 +33,7 @@
           url: `https://ibasemaps-api.arcgis.com/arcgis/rest/services/World_Imagery/MapServer?token=${apiKey}`
         })
       tileLayer.addTo(map);
+      await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
