--- a/tests/leaflet/vector-only.html
+++ b/tests/leaflet/vector-only.html
@@ -32,7 +32,7 @@
     });
 
     vectorTileLayer.addTo(map);
-
+    await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
