--- a/tests/maplibre/geojson-only.html
+++ b/tests/maplibre/geojson-only.html
@@ -46,6 +46,7 @@
             resolve('Loaded')
         })
     })
+    await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
