--- a/tests/maplibre/raster-only.html
+++ b/tests/maplibre/raster-only.html
@@ -41,6 +41,7 @@
             type: "raster",
             source: "parcels",
       });
+      await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
