--- a/tests/maplibre/vector-map.html
+++ b/tests/maplibre/vector-map.html
@@ -34,6 +34,8 @@
         zoom: location.zoom-1, // starting zoom
         center: [location.lng,location.lat] // starting location [longitude, latitude]
       });
+
+      await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
