--- a/tests/maplibre/vector-only.html
+++ b/tests/maplibre/vector-only.html
@@ -48,6 +48,7 @@
           "fill-outline-color": "#365D8D"
         }
       });
+      await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
