--- a/tests/openlayers/raster-map.html
+++ b/tests/openlayers/raster-map.html
@@ -41,6 +41,7 @@
           zoom: location.zoom
         })
       );
+      await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
