--- a/tests/openlayers/raster-only.html
+++ b/tests/openlayers/raster-only.html
@@ -42,6 +42,7 @@
       });
 
       map.addLayer(tileLayer);
+      await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
