--- a/tests/openlayers/vector-only.html
+++ b/tests/openlayers/vector-only.html
@@ -45,7 +45,7 @@
         });
     
         map.addLayer(parcelsLayer);
-
+        await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
