--- a/tests/leaflet/geojson-only.html
+++ b/tests/leaflet/geojson-only.html
@@ -32,6 +32,7 @@
       .then(response => {
         L.geoJson(response).addTo(map);
       });
+      await new Promise((res,rej)=>setTimeout(res,5000));
   </script>
 </body>
 </html>
