--- a/tests/leaflet/raster-only.html
+++ b/tests/leaflet/raster-only.html
@@ -32,6 +32,7 @@
       })
         
       tileLayer.addTo(map);
+      await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
