--- a/tests/openlayers/vector-map.html
+++ b/tests/openlayers/vector-map.html
@@ -40,6 +40,7 @@
       );
 
       olms.apply(map, basemapURL);
+      await new Promise((res,rej)=>setTimeout(res,5000));
     </script>
   </body>
 </html>
